--- a/config.html
+++ b/config.html
@@ -35,6 +35,6 @@ git clone https://github.com/tensorflow/tensorflow.git <!--url of that git folde
  cd <!--change directory-->
 
  touch error.log <!--it will create error.log file-->
- <!-- if we want to ignore error.log file we will include it in .gitignore 
+ <!-- If we want to ignore error.log file we will include it in .gitignore 
     .. -->
     touch .gitignore <!--just write error.log in the gitignore file-->
